--- a/POC/slider/index.html
+++ b/POC/slider/index.html
@@ -4,6 +4,25 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.0.js">
+    </script>
+    <script>
+        $(document).ready(function() {
+            $('#contrastSlider').change(function(e) {
+                var value = $(e.target).val();
+
+                $('#contrastFilter').css('opacity', value);
+            });
+        });
+
+        $(document).ready(function() {
+            $('#contrastSlider1').change(function(e) {
+                var value = $(e.target).val();
+
+                $('#contrastFilter1').css('opacity', value);
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -13,6 +32,24 @@
         <img class="bottom" src="file:///C:\Users\nod\Downloads\POC\assets\sl2.jpg" alt="Keine Datei vorhanden." />
         <img class="top" src="file:///C:\Users\nod\Downloads\POC\assets\sl1.jpg" alt="Keine Datei vorhanden." />
     </div>
+    <div id="opsl">
+        <h2>Opacity-Slider</h2>
+        <img src="file:///C:\Users\nod\Downloads\POC\assets\sl1.jpg" id="contrastFilter">
+
+        <div id="contrastSlider">
+            <input id="contrast" type="range" value="contrast" max="1.0" min="0" step="0.01" />
+        </div>
+
+        <img src="file:///C:\Users\nod\Downloads\POC\assets\sl2.jpg" id="contrastFilter1">
+
+        <div id="contrastSlider1">
+            <input id="contrast" type="range" value="contrast" max="1.0" min="0" step="0.01" />
+        </div>
+
+    </div>
+
+
+
 
 </body>
 
