--- a/POC/slider/index.html
+++ b/POC/slider/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title></title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>POC - Slider</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="https://code.jquery.com/jquery-3.5.0.js">
     </script>
     <script>
@@ -29,18 +35,18 @@
 
     <div id="cf">
         <h1>Hover-Slide</h1>
-        <img class="bottom" src="file:///C:\Users\nod\Downloads\POC\assets\sl2.jpg" alt="Keine Datei vorhanden." />
-        <img class="top" src="file:///C:\Users\nod\Downloads\POC\assets\sl1.jpg" alt="Keine Datei vorhanden." />
+        <img src="../assets/sl2.jpg" class="bottom" alt="Keine Datei vorhanden." />
+        <img src="../assets/sl1.jpg" class="top" alt="Keine Datei vorhanden." />
     </div>
     <div id="opsl">
         <h2>Opacity-Slider</h2>
-        <img src="file:///C:\Users\nod\Downloads\POC\assets\sl1.jpg" id="contrastFilter">
+        <img src="../assets/sl1.jpg" id="contrastFilter">
 
         <div id="contrastSlider">
             <input id="contrast" type="range" value="contrast" max="1.0" min="0" step="0.01" />
         </div>
 
-        <img src="file:///C:\Users\nod\Downloads\POC\assets\sl2.jpg" id="contrastFilter1">
+        <img src="../assets/sl2.jpg" id="contrastFilter1">
 
         <div id="contrastSlider1">
             <input id="contrast" type="range" value="contrast" max="1.0" min="0" step="0.01" />
